[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "fpdf2>=2.8.3",
    "google-genai>=1.28.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "seaborn>=0.13.2",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.65",
    "requests>=2.32.4",
    "plotly>=6.2.0",
]
